--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.1",
     "npm": "^9.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
